tests/paczka1/small_fuzzy/97073528.err
Error in line 2: cgptEJ S340 24,4
Error in line 3: cgptEJ S269 43,3
Error in line 7: 14Eum S340 7,0
